# Markdown-Direct-Protocol

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_mdp.c  run_benchmarks.sh
examples/rust-client/: Cargo.toml  README.md
examples/rust-client/src/: main.rs
src/: client.c  mdp.c  mdp.h  server.c
tests/: smoke_msquic.sh  test_mdp.c
