[package]
name = "mdp-client"
version = "0.1.0"
edition = "2021"
description = "Rust MDP (Markdown Direct Protocol) client using quinn"

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
